fix prod build order.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "npm-run-all --parallel dev:*",
     "dev:eleventy": "ELEVENTY_ENV=development eleventy --serve --quiet",
     "dev:parcel": "parcel watch --public-url /assets src/_assets/images/* src/_assets/css/main.css src/_assets/js/index.js --out-dir _site/assets",
-    "build": "run-s prod:*",
+    "build": "run-s prod:parcel prod:eleventy",
     "prod:eleventy": "ELEVENTY_ENV=production eleventy --output=./build",
-    "prod:parcel": "parcel build --public-url /assets src/_assets/images/* src/_assets/images/* src/_assets/css/main.css src/_assets/js/index.js --out-dir build/assets"
+    "prod:parcel": "NODE_ENV=production parcel build --public-url /assets src/_assets/images/* src/_assets/images/* src/_assets/css/main.css src/_assets/js/index.js --out-dir build/assets"
   },
   "author": "Stubborn Goods",
   "license": "ISC",
