--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "11ty-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "npm-run-all --parallel dev:*",
     "dev:eleventy": "ELEVENTY_ENV=development eleventy --serve --quiet",
-    "dev:parcel": "parcel watch --public-url /assets src/_assets/css/main.css src/_assets/js/index.js --out-dir _site/assets",
+    "dev:parcel": "parcel watch --public-url /assets src/_assets/css/main.css src/_assets/js/index.js --dist-dir _site/assets",
     "build": "run-s prod:parcel prod:eleventy",
     "prod:eleventy": "ELEVENTY_ENV=production eleventy --output=./build",
-    "prod:parcel": "NODE_ENV=production parcel build --public-url /assets src/_assets/css/main.css src/_assets/js/index.js --out-dir build/assets"
+    "prod:parcel": "NODE_ENV=production parcel build --public-url /assets src/_assets/css/main.css src/_assets/js/index.js --dist-dir build/assets"
   },
-  "author": "Stubborn Goods",
+  "author": "Dusty Candland",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
     "@11ty/eleventy-plugin-rss": "^1.0.6",
@@ -21,12 +19,12 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "autoprefixer": "^9.6.1",
-    "cssnano": "^4.1.10",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "autoprefixer": "^9",
     "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.12.3",
-    "postcss-nested": "^4.1.2",
-    "stimulus": "^1.1.1",
-    "tailwindcss": "^1.0.0"
+    "parcel": "^2.0.0-beta.1",
+    "postcss": "^7",
+    "stimulus": "2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
