--- a/package.json
+++ b/package.json
@@ -6,27 +6,26 @@
     "start": "npm-run-all --parallel dev:*",
     "dev:eleventy": "ELEVENTY_ENV=development eleventy --serve --quiet",
     "dev:esbuild": "esbuild ./src/_assets/js/index.js --bundle --outfile=./_site/assets/js/index.js --watch",
-    "dev:tailwind": "npx tailwindcss -i ./src/_assets/css/main.css -o ./_site/assets/css/main.css --watch --postcss",
+    "dev:tailwind": "npx @tailwindcss/cli -i ./src/_assets/css/main.css -o ./_site/assets/css/main.css --watch --postcss",
     "build": "run-s prod:eleventy prod:esbuild prod:tailwind",
     "prod:eleventy": "ELEVENTY_ENV=production eleventy --output=./build",
     "prod:esbuild": "NODE_ENV=production esbuild ./src/_assets/js/index.js --bundle --minify --sourcemap --target=es6 --outfile=./build/assets/js/index.js",
-    "prod:tailwind": "NODE_ENV=production npx tailwindcss -i ./src/_assets/css/main.css -o ./build/assets/css/main.css --minify --postcss"
+    "prod:tailwind": "NODE_ENV=production npx @tailwindcss/cli -i ./src/_assets/css/main.css -o ./build/assets/css/main.css --minify --postcss"
   },
   "author": "Dusty Candland",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0",
-    "@11ty/eleventy-plugin-rss": "^2.0.2",
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
-    "esbuild": "^0.24.0",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.24",
+    "esbuild": "^0.27.3",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^16.1.0",
-    "stimulus": "^3.0.1",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^4.2.0"
   },
   "dependencies": {
-    "@11ty/eleventy-img": "^5.0.0",
+    "@11ty/eleventy-img": "^6.0.4",
+    "@hotwired/stimulus": "^3.2.2",
     "eleventy-xml-plugin": "^0.1.0"
   }
 }
