--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@11ty/eleventy-img": "^6.0.4",
+    "@11ty/eleventy-navigation": "^1.0.5",
     "@hotwired/stimulus": "^3.2.2",
     "eleventy-xml-plugin": "^0.1.0"
   }
