--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "11ty-starter",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "scripts": {
     "start": "npm-run-all --parallel dev:*",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@11ty/eleventy-img": "^6.0.4",
     "@11ty/eleventy-navigation": "^1.0.5",
+    "@11ty/font-awesome": "^1.0.1",
     "@hotwired/stimulus": "^3.2.2",
     "@tailwindcss/cli": "^4.2.0",
     "eleventy-xml-plugin": "^0.1.0"
