Add markdown-it dependency

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@11ty/font-awesome": "^1.0.1",
     "@hotwired/stimulus": "^3.2.2",
     "@tailwindcss/cli": "^4.2.0",
-    "eleventy-xml-plugin": "^0.1.0"
+    "eleventy-xml-plugin": "^0.1.0",
+    "markdown-it": "^14.1.1"
   }
 }
